lots of changes

--- a/micronaut/pom.xml
+++ b/micronaut/pom.xml
@@ -5,7 +5,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>dev.retask</groupId>
+	<groupId>dev.jarcadia</groupId>
 	<artifactId>retask-micronaut</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
@@ -43,8 +43,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>dev.retask</groupId>
-			<artifactId>retask</artifactId>
+			<groupId>dev.jarcadia</groupId>
+			<artifactId>retask-core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
